feature: stage审核支持审核流 issue #4531

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -103,7 +103,7 @@
     "enableStageReviewRadioLabel": "Manual Approvals",
     "disableStageReviewRadioLabel": "Automation",
     "stageReviewDesc": "60-day unreviewed automatically ends the pipeline and marks it as STAGE_SUCCESS",
-    "stageTimeoutLabel": "Timeout",
+    "stageTimeoutLabel": "Approval time limit",
     "stageTimeoutError": "Please specify an integer from 1 to 720",
     "stageTimeoutDesc": "All the integers between 1 and 720 (Unit: hour)",
     "stageUserTriggers": "Stage Owner",
@@ -111,7 +111,7 @@
     "stageTriggerDesc": "Multiple people separated by commas",
     "stageReviewInputDesc": "Review instructions",
     "stageReviewInputDescTip": "You can fill in the audit criteria or the meaning of each parameter here",
-    "stageReviewParams": "Custom variable",
+    "stageReviewParams": "Custom parameters",
     "none": "none",
     "skipStageDesc": "SKIPED",
     "pipelinesHistory": "Builds",
