--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -103,7 +103,7 @@
     "enableStageReviewRadioLabel": "人工审核",
     "disableStageReviewRadioLabel": "自动",
     "stageReviewDesc": "60天未审核自动结束该流水线并标记为Stage成功",
-    "stageTimeoutLabel": "审核最长等待时间",
+    "stageTimeoutLabel": "审批时间限制",
     "stageTimeoutError": "请输入1-720之间的整数",
     "stageTimeoutDesc": "1-720之间的整数（单位：小时）",
     "stageUserTriggers": "Stage审核人",
@@ -111,7 +111,7 @@
     "stageTriggerDesc": "多个人员用英文逗号分隔",
     "stageReviewInputDesc": "审核说明",
     "stageReviewInputDescTip": "可以在此填写审核的标准或者各参数的含义等介绍",
-    "stageReviewParams": "自定义变量",
+    "stageReviewParams": "自定义参数",
     "none": "无",
     "skipStageDesc": "已跳过",
     "pipelinesHistory": "执行历史",
