feature: stage审核支持审核流 issue #4531

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -105,7 +105,7 @@
     "stageReviewDesc": "60-day unreviewed automatically ends the pipeline and marks it as STAGE_SUCCESS",
     "stageTimeoutLabel": "Approval time limit",
     "stageTimeoutError": "Please specify an integer from 1 to 720",
-    "stageTimeoutDesc": "All the integers between 1 and 720 (Unit: hour)",
+    "stageTimeoutDesc": "If the approval is not carried out within the time limit, it shall be deemed as approved. The value range is: an integer between 1 and 720 (unit: hour)",
     "stageUserTriggers": "Stage Owner",
     "stageOptionLabel": "Run this Stage",
     "stageTriggerDesc": "Multiple people separated by commas",
@@ -631,7 +631,7 @@
         "copyStageFail": "Duplicate stage failed",
         "retryAllJobs": "Retry all jobs",
         "retryFailJobs": "Retry failed jobs only",
-        "stageManualTriggerUserNoEmptyTips": "Enter at least 1 stage owner",
+        "stageManualTriggerUserNoEmptyTips": "Please add at least one approval step",
         "triggerTooltips": " Click builds to trigger the configurable recommended version and pipeline variables",
         "userTime": "User time",
         "systemTime": "System time",
