--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -105,7 +105,7 @@
     "stageReviewDesc": "60天未审核自动结束该流水线并标记为Stage成功",
     "stageTimeoutLabel": "审批时间限制",
     "stageTimeoutError": "请输入1-720之间的整数",
-    "stageTimeoutDesc": "1-720之间的整数（单位：小时）",
+    "stageTimeoutDesc": "若超出时间仍未进行审批，视为审批通过。取值范围为：1-720之间的整数（单位：小时）",
     "stageUserTriggers": "Stage审核人",
     "stageOptionLabel": "本Stage执行条件",
     "stageTriggerDesc": "多个人员用英文逗号分隔",
@@ -633,7 +633,7 @@
         "copyStageFail": "复制stage失败",
         "retryAllJobs": "重新运行Stage下所有Job",
         "retryFailJobs": "重新运行Stage下所有失败Job",
-        "stageManualTriggerUserNoEmptyTips": "请输入至少一名审核人",
+        "stageManualTriggerUserNoEmptyTips": "请至少添加一个审批步骤",
         "triggerTooltips": "点击构建触发可配置推荐版本号、流水线变量",
         "userTime": "用户耗时",
         "systemTime": "系统耗时",
