feat: docker 支持核心数量选择 issue  #4438

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -661,6 +661,8 @@
         "imageType": "Image type",
         "assignResource": "Docker image url",
         "imageTicket": "Docker image  ticket",
+        "performance": "Model",
+        "cpuUnit": "C",
         "workspace": "workspace on",
         "workspaceTips": "If not filled, the it will be saved in [Agent installation directory]/workspace/[pipeline ID]/src by default",
         "envDependency": "Mount dependent software over NFS",
@@ -854,6 +856,7 @@
         "automaticRetry": "Auto Retry",
         "manualRetry": "Manual Retry",
         "skipType": "Skip Type",
+        "customEnv": "Custom environment variables",
         "continueWhenFailedDesc": "If you open the option 'Continue on error' at the same time, we will continue only when all retry failed",
         "retryWhenFailed": "Retry on error",
         "retryCount": "Retry count",
