--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -664,6 +664,8 @@
         "imageType": "image类型",
         "assignResource": "指定构建资源",
         "imageTicket": "镜像对应凭证",
+        "performance": "机型",
+        "cpuUnit": "核",
         "workspace": "指定工作空间",
         "workspaceTips": "不填默认为 [Agent安装目录]/workspace/[流水线ID]/src",
         "envDependency": "nfs方式挂载依赖环境",
@@ -857,6 +859,7 @@
         "automaticRetry": "可自动重试",
         "manualRetry": "可手动重试",
         "skipType": "跳过方式",
+        "customEnv": "自定义环境变量",
         "continueWhenFailedDesc": "如果同时开启了”失败时重试“，我们将优先尝试重试，如果所有重试都失败后才会继续",
         "retryWhenFailed": "失败时自动重试",
         "retryCount": "重试次数",
