--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -591,5 +591,14 @@
     "最近修改时间": "最近修改时间",
     "最近执行人": "最近执行人",
     "最近执行时间": "最近执行时间",
-    "搜索": "搜索"
+    "搜索": "搜索",
+    "质量红线指标": "质量红线指标",
+    "配置片段：": "配置片段：",
+    "输出参数：": "输出参数：",
+    "参数名": "参数名",
+    "参数说明": "参数说明",
+    "质量红线指标：": "质量红线指标：",
+    "指标名": "指标名",
+    "值类型": "值类型",
+    "支持的操作": "支持的操作"
 }
