feature: stage审核支持审核流 issue #4531

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -127,6 +127,49 @@
     "fileUploadSuccess": "Upload Sucessful",
     "empty": "No data",
     "link": "link",
+    "stageReview": {
+        "stageInConditions": "Stage-In conditions",
+        "approvalFlow": "Approval flow",
+        "customVariables": "Custom variables",
+        "requireRule": "{0} is required",
+        "createVariables": "Create variables",
+        "editVariables": "Edit variables",
+        "variableName": "Name",
+        "variableVal": "Value",
+        "name": "Name",
+        "alias": "Alias",
+        "type": "Type",
+        "defaultValue": "Default value",
+        "required": "Required",
+        "options": "Options",
+        "listOptions": "Options",
+        "operation": "Operation",
+        "confirmDelete": "Delete this variable?",
+        "manualApprovals": "Manual Approvals",
+        "approvalDescription": "Approval description",
+        "showMore": "More",
+        "hideMore": "Collapse",
+        "timeOutTips": "Please approve before {0}. If overdued, pipeline status will be set as Stage Success automatically.",
+        "currentStatus": "Current status",
+        "approve": "Approve",
+        "approveRes": "Continue pipeline execution",
+        "abort": "Reject",
+        "abortRes": "Set previous stage status as Stage Success",
+        "approvalOpinion": "Approval opinion",
+        "opinionTips": "Please enter approval opinion",
+        "pendingApproval": "Pending approval. Approver: {0}",
+        "approved": "Approved. Approver: {0}",
+        "waitApproval": "Waiting for preivous approval. Approver: {0}",
+        "opinionRequired": "When reject is selected, approval opinion is required",
+        "userInputTips": "Please enter approvers. Pipeline variable is supported.",
+        "reviewRequire": "Name of approval flow and approvers are required",
+        "addFlow": "Create approval step",
+        "approveBy": "Approval by {0}:",
+        "editVariable": "Edit variable:",
+        "approveOpinion": "Approval opinion:",
+        "approveTime": "Approval time:",
+        "approver": "Approver:"
+    },
     "execDetail": {
         "log": "Log",
         "setting": "Configuration",
