--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -127,6 +127,49 @@
     "fileUploadSuccess": "上传成功",
     "empty": "暂无数据",
     "link": "链接",
+    "stageReview": {
+        "stageInConditions": "准入规则",
+        "approvalFlow": "审核流",
+        "customVariables": "自定义参数",
+        "requireRule": "{0} 是必填项",
+        "createVariables": "添加参数",
+        "editVariables": "编辑参数",
+        "variableName": "参数名称",
+        "variableVal": "参数值",
+        "name": "变量名称",
+        "alias": "中文名",
+        "type": "类型",
+        "defaultValue": "默认值",
+        "required": "是否必填",
+        "options": "可选项",
+        "listOptions": "下拉选项",
+        "operation": "操作",
+        "confirmDelete": "确认删除该参数吗？",
+        "manualApprovals": "人工审核",
+        "approvalDescription": "审核说明",
+        "showMore": "展开更多",
+        "hideMore": "收起更多",
+        "timeOutTips": "请在本时间之前完成审核操作，逾期将取消执行，自动标记流水线为Stage成功状态",
+        "currentStatus": "当前状态",
+        "approve": "同意",
+        "approveRes": "继续执行流水线",
+        "abort": "驳回",
+        "abortRes": "取消执行，立即标记为Stage成功状态",
+        "approvalOpinion": "审核意见",
+        "opinionTips": "请输入审核意见，驳回时必填",
+        "pendingApproval": "审批中，处理人：{0}",
+        "approved": "已审批，处理人：{0}",
+        "waitApproval": "待审批，处理人：{0}",
+        "opinionRequired": "驳回时，审核意见必填",
+        "userInputTips": "请输入一个或多个审核人，支持输入变量",
+        "reviewRequire": "审核名称和审核人必填",
+        "addFlow": "添加审批步骤",
+        "approveBy": "由 {0} 审批：",
+        "editVariable": "变更参数：",
+        "approveOpinion": "审批意见",
+        "approveTime": "审批时间：",
+        "approver": "处理人："
+    },
     "execDetail": {
         "log": "日志",
         "setting": "配置",
