--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -166,7 +166,7 @@
         "addFlow": "添加审批步骤",
         "approveBy": "由 {0} 审批：",
         "editVariable": "变更参数：",
-        "approveOpinion": "审批意见",
+        "approveOpinion": "审批意见：",
         "approveTime": "审批时间：",
         "approver": "处理人："
     },
