feat: 流水线选择插件页面改版 issue #1268

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -647,6 +647,12 @@
         "install": "Install",
         "all": "All",
         "store": "RD store",
+        "projectAtom": "Project Atom",
+        "fixedTips": "Plugins that do not apply to the current Job",
+        "removeAtom": "Removed from the project",
+        "unRemoveAtom": "Plugin in use cannot be removed",
+        "installAtom": "Add to project",
+        "loadedAllAtom": "Loaded all Atoms",
         "unInstalled": "Not Installed",
         "installed": "Installed",
         "unRecomReason": "The docker image is no longer recommended and will be removed later. Such docker images are generally provided with a replacement docker image, please use the new image",
