--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -650,6 +650,12 @@
         "install": "安装",
         "all": "全部",
         "store": "研发商店",
+        "projectAtom": "项目插件",
+        "fixedTips": "不适用于当前Job的插件",
+        "loadedAllAtom": "已加载全部插件",
+        "removeAtom": "移出项目",
+        "unRemoveAtom": "使用中的插件无法被移出",
+        "installAtom": "添加到项目",
         "unInstalled": "未安装",
         "installed": "已安装",
         "unRecomReason": "不建议使用的容器镜像，后续将下架。此类容器镜像一般都已提供替换用的容器镜像，请使用新容器镜像",
