feat: 插件暂停+插件自定义前端配合，自定义执行中表单提交能力 issue #4984

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -861,6 +861,8 @@
             "templateDownload": "Download",
             "otherChoice": "Other Choice"
         },
+        "reviewers": "reviewers",
+        "reviewTips": "Environment variables (${var}) are supported. Multiple environment variables are separated by English commas",
         "stageOption": "Control option"
     },
     "storeMap": {
