--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -647,6 +647,7 @@
         "notWorkAtCur": "在当前构建资源类型下不可用",
         "knowMore": "了解更多",
         "noInstallRight": "暂无权限安装该镜像",
+        "noInstallPerm": "无权限安装",
         "install": "安装",
         "all": "全部",
         "store": "研发商店",
