feat: 流水线列表页 stage_success状态缺失 issue #3917

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -454,7 +454,11 @@
         "constraintMode": "Constraint mode",
         "constraintModeTips": "You can‘t arrange the pipeline freely and should update the instance through template",
         "noTemplateTips": " Please select a template first",
-        "noSearchResult": " No results found"
+        "noSearchResult": " No results found",
+        "success": "Success",
+        "failed": "Failed",
+        "cancel": "Cancel",
+        "stageSuccess": "Stage success"
     },
     "subpage": {
         "saveAndExec": " Save and run",
