feat: 流水线选择插件页面改版 issue #1268

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -62,6 +62,7 @@
     "copySuc": "Duplicated successfully ",
     "deleteSuc": "Delete successfully ",
     "noData": "No data",
+    "atomEmpty": "No plugins, try a different keyword",
     "atom": "Plugin",
     "icon": "Icon",
     "version": "Version",
