feat: 流水线选择插件页面，研发商店入口，插件列表优化 issue  #1268

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -648,9 +648,19 @@
         "notWorkAtCur": "Not available under current Job type",
         "knowMore": "Read more",
         "noInstallRight": "No permission to install this image",
+        "noInstallPerm": "Install without permission. If necessary, contact the plug-in publisher to adjust the visibility",
         "install": "Install",
         "all": "All",
         "store": "RD store",
+        "projectAtom": "Project Atom",
+        "fixedTips": "Plugins that do not apply to the current Job",
+        "removeAtom": "Removed from the project",
+        "unRemoveAtom": "Plugin in use cannot be removed",
+        "loadedAllAtom": "Loaded all Atoms",
+        "viewPipeline": "View Pipeline",
+        "installAtom": "Add to project",
+        "update": "update on",
+        "installAtomSuc": "Successfully installed to the project, click the plugin line to select",
         "unInstalled": "Not Installed",
         "installed": "Installed",
         "unRecomReason": "The docker image is no longer recommended and will be removed later. Such docker images are generally provided with a replacement docker image, please use the new image",
