--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -651,9 +651,19 @@
         "notWorkAtCur": "在当前构建资源类型下不可用",
         "knowMore": "了解更多",
         "noInstallRight": "暂无权限安装该镜像",
+        "noInstallPerm": "无权限安装，若有需要，联系插件发布者调整可见范围",
         "install": "安装",
         "all": "全部",
         "store": "研发商店",
+        "projectAtom": "项目插件",
+        "fixedTips": "不适用于当前Job的插件",
+        "removeAtom": "移出项目",
+        "unRemoveAtom": "使用中的插件无法被移出",
+        "loadedAllAtom": "已加载全部插件",
+        "viewPipeline": "查看流水线",
+        "installAtom": "添加到项目",
+        "update": "更新于",
+        "installAtomSuc": "成功安装到项目，点击插件行即可选中",
         "unInstalled": "未安装",
         "installed": "已安装",
         "unRecomReason": "不建议使用的容器镜像，后续将下架。此类容器镜像一般都已提供替换用的容器镜像，请使用新容器镜像",
