--- a/src/frontend/locale/codelib/zh-CN.json
+++ b/src/frontend/locale/codelib/zh-CN.json
@@ -46,6 +46,7 @@
     "svnSshRule": "请输入以svn+ssh://开头的正确的",
     "gitlabSshRule": "请输入以 git@ 开头，以 .git 结尾的",
     "httpRule": "请输入以http://开头的正确的",
+    "httpsRule": "请输入以http://开头，以.git结尾的",
     "httpOrHttpsRule": "请输入以 http://或 https://开头，以.git结尾的",
     "paramBeString": "参数必须为字符串",
     "gitCodeInternalRule": "请输入以git@开头，以.git结尾的",
